# anafi-gnc

./: .gitignore  README.md
anafi_setup/: CMakeLists.txt  package.xml
anafi_setup/config/: anafi_config.yaml
anafi_setup/launch/: launch_with_bag.launch  real.launch  sim.launch
anafi_uav_msgs/: CMakeLists.txt  package.xml
anafi_uav_msgs/action/: TakeOff.action
anafi_uav_msgs/msg/: AnafiTelemetry.msg  AttitudeSetpoint.msg  EkfOutput.msg  EulerPose.msg
anafi_uav_msgs/srv/: SetControllerAction.srv  SetControllerState.srv  SetDesiredPose.srv
bash_scripts/: land_drone.sh  rosbag_drone_topics.sh  rosbag_msc_topics.sh  switch_manual_control.sh
control/attitude_control/: CMakeLists.txt  package.xml  setup.py
control/attitude_control/launch/: attitude_controller.launch
control/attitude_control/scripts/: attitude_controller.py
control/attitude_control/scripts/attitude_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
control/attitude_control/scripts/attitude_control_helpers/: utilities.py  velocity_reference_model.py
control/attitude_controller/: CMakeLists.txt  package.xml
control/attitude_controller/config/: attitude_controller.yaml
control/attitude_controller/launch/: attitude_controller.launch
control/attitude_controller/scripts/: attitude_controller.py  attitude_reference_model.py  velocity_reference_model.py
control/control_launch/: CMakeLists.txt  package.xml
control/control_launch/launch/: control.launch
control/high_level_action_control/: CMakeLists.txt  package.xml
control/high_level_action_control/config/: attitude_control.yaml
control/high_level_action_control/launch/: high_level_action_controller.launch
control/high_level_action_control/scripts/: high_level_action_controller.py
control/mpc/: CMakeLists.txt  package.xml
control/mpc/config/: config.yaml
control/mpc/launch/: mpc.launch
control/mpc/scripts/: model_predictive_controller.py
control/velocity_control/: CMakeLists.txt  package.xml
control/velocity_control/config/: config.yaml
control/velocity_control/launch/: velocity_controller.launch
control/velocity_control/scripts/: velocity_controller.py
control/velocity_control/scripts/velocity_control_helpers/: attitude_reference_model.py  controllers.py  utilities.py  velocity_reference_model.py
dnn_cv/: how_to_run_darknet_ros.txt
dnn_cv/launch/: dnnCV.launch
dnn_cv/yolo_network_config/weights/: .gitignore  ardrone_sim.weights  center.weights  mirror.weights  old-sim-weights.weights  yolov4-tiny-custom.weights
ekf/: CMakeLists.txt
ekf/launch/: perception_ekf_node.launch
emulation/emulate_attitude_commands/: CMakeLists.txt  package.xml
emulation/emulate_attitude_commands/config/: config.yaml
emulation/emulate_attitude_commands/launch/: emulate.launch
emulation/emulate_attitude_commands/scripts/: generate_attitude_commands.py
emulation/emulate_attitude_errors/: CMakeLists.txt  package.xml
emulation/emulate_attitude_errors/config/: config.yaml
emulation/emulate_attitude_errors/launch/: emulate.launch
emulation/emulate_attitude_errors/scripts/: generate_attitude_errors.py
emulation/emulate_moving_platform/: CMakeLists.txt  package.xml
emulation/emulate_moving_platform/config/: config.yaml
emulation/emulate_moving_platform/launch/: emulate.launch
emulation/emulate_moving_platform/scripts/: generate_platform_movement.py
emulation/emulate_position_errors/: CMakeLists.txt  package.xml
emulation/emulate_position_errors/config/: config.yaml
emulation/emulate_position_errors/launch/: emulate.launch
emulation/emulate_velocity_errors/: CMakeLists.txt  package.xml
gnc_setup/: CMakeLists.txt  package.xml
gnc_setup/config/: config.yaml
gnc_setup/launch/: gnc_launch.launch
guidance/: CMakeLists.txt  package.xml
guidance/config/: config.yaml
guidance/launch/: guidance.launch  pid_guidance.launch  pure_pursuit.launch
guidance/scripts/: guidance.py  pid_guidance.py  pure_pursuit.py
interface/drone_interface/: CMakeLists.txt  package.xml
interface/ground_truth/config/: config.yaml
interface/interface_launch/: CMakeLists.txt  package.xml
interface/interface_launch/launch/: interface_sim.launch
mission/action_executor/: CMakeLists.txt  package.xml
mission/action_planner/: CMakeLists.txt  package.xml
mission/mission_executor/: CMakeLists.txt  package.xml
mission/mission_launch/: CMakeLists.txt  package.xml
mission/mission_planner/: CMakeLists.txt  package.xml
mission/mission_planner/config/: config.yaml
mission/mission_planner/launch/: action_planner.launch  mission_planner.launch
mission/mission_planner/scripts/: mission_planner.py
mission/mission_planner/scripts/mission_planner_helpers/: utilities.py
output_saver/: CMakeLists.txt  package.xml
output_saver/config/: output_types.yaml
output_saver/launch/: real.launch
output_saver/scripts/: commands.py  estimates.py  ground_truths.py  output_saver.py
perception/: CMakeLists.txt  package.xml
perception/dnn_cv/: CMakeLists.txt  how_to_run_darknet_ros.txt  package.xml
perception/ekf/: CMakeLists.txt  package.xml
perception/launch/: ekf_sim.launch  experiments.launch  perception_sim.launch
perception/tcv/: CMakeLists.txt  package.xml
tcv/: package.xml
tcv/launch/: experiments.launch  tcv_node.launch
tcv/scripts/: tcv.py
utilities/: CMakeLists.txt  package.xml
utilities/scripts/: estimate_ode_parameters.py  visualize.py
(+35 files in other folders)
