<?xml version="1.0"?>
<package format="2">
  <name>old_anafi_setup</name>
  <version>0.0.0</version>
  <description>The old_anafi_setup package</description>
  <maintainer email="killah@todo.todo">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

 </package>