<?xml version="1.0"?>
<package format="2">
  <name>interface_launch</name>
  <version>0.0.0</version>
  <description>The interface_launch package</description>
  <maintainer email="killah@todo.todo">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

 </package>